# fuel-data-provider-rs

./: .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  README.md  docker-compose.yml  tx.json
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250403_214830_token_new_columns.rs  m20250404_024403_token_liquidity_usd.rs
resources/: config.toml
resources/abi/: Forc.toml
resources/abi/fuel_token_gateway/: Forc.toml
resources/abi/fuel_token_gateway/src/: data_structures.sw  errors.sw  events.sw  main.sw
resources/abi/mira_amm_contract/: Forc.toml
resources/abi/mira_amm_contract/src/: main.sw
resources/abi/mira_amm_contract_dep/swap/: Forc.toml
resources/abi/mira_amm_contract_dep/utils/: Forc.toml
resources/abi/native-asset-contract/: Forc.toml
resources/abi/token_contract/: Forc.toml
resources/abi/token_contract/src/: main.sw
src/: config.rs  constants.rs  main.rs
src/api/rest/: endpoint.rs  mod.rs  routes.rs
src/domain/: mod.rs
src/domain/entity/: entity.rs  mira_pools_entity.rs  mod.rs  pair_swaps_entity.rs  price_data_entity.rs  sync_status_entity.rs  token_entity.rs  token_pairs_entity.rs  unknown_token_entity.rs  volume_data_entity.rs
src/domain/service/: mod.rs
src/domain/service/cleanup/: expired_data_manager.rs  mod.rs
src/domain/service/exception/: data_exception.rs  integration_exception.rs  mod.rs
src/domain/service/manager/: calculation_manager.rs  expired_data_manager.rs  mod.rs
src/domain/service/persistence/: mira_pools_service.rs  mod.rs  pair_swaps_service.rs  price_data_service.rs  sync_status_service.rs  token_pairs_service.rs  token_service.rs  unknown_token_service.rs  volume_data_service.rs
src/domain/utils/: converter.rs  mod.rs
src/ports/: mod.rs  tx_monitor.rs  tx_monitor_poc.rs
src/ports/blockchain/: blockchain_data_service.rs  fuel_model.rs  fuel_rpc_service.rs  mod.rs  tx_sync.rs
src/ports/db/: database_manager.rs  mod.rs
src/ports/sentio/: mod.rs  model.rs  subgraph_query_service.rs
src/ports/squid/: mod.rs  squid_query_service.rs
(+28 files in other folders)
