[package]
name = "fuel-data-provider-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.11.5"
config = "0.15.3"
once_cell = "1.10"
warp = "0.3"
chrono = { version="0.4.38", features=["serde"] }
num-traits = "0.2.19"
fuels = "0.66.10"
reqwest = "0.12.9"
fuel-tx = "0.59.1"

[[bin]]
name = "fuel_data_provider"
path = "src/main.rs"
