[package]
name = "fuel-data-provider-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42.0", features = ["full"] }
async-trait = "0.1.83"
serde_json = "1.0.133"
serde = { version = "1.0.216", features = ["derive"] }
log = "0.4.22"
env_logger = "0.11.5"
config = "0.15.3"
once_cell = "1.20.2"
warp = "0.3.7"
chrono = { version="0.4.39", features=["serde"] }
num-traits = "0.2.19"
fuels = "0.66.10"
reqwest = { version = "0.12.9", features = ["json"] }
fuel-tx = "0.59.1"
uuid = { version = "1.11.0", features = ["v4","serde"] }
sea-orm = { version = "1.1.2", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros","with-chrono" ] }
strum_macros = "0.26.4"
thiserror = "1.0.69"

[[bin]]
name = "fuel_data_provider"
path = "src/main.rs"
